--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Check for unused dependencies
         run: |
-          cargo install cargo-shear
+          cargo install cargo-shear --version 1.1.9
           cargo shear
 
       - name: Cargo audit
