--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -74,12 +74,15 @@ jobs:
             fi
           done
 
+      - name: Install cargo-binstall
+        uses: cargo-bins/cargo-binstall@main
+
       - name: Check for unused dependencies
         run: |
-          cargo install cargo-shear --version 1.1.9
+          cargo binstall --no-confirm cargo-shear --version 1.1.9
           cargo shear
 
       - name: Cargo audit
         run: |
-          cargo install cargo-audit
+          cargo binstall --no-confirm cargo-audit
           cargo audit
