chore: update snark-verifier to v0.2.0 stable rust

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,4 +1,4 @@
 style_edition = "2021"
 imports_granularity = "Crate"
-# unstable features:
-# group_imports = "StdExternalCrate"
+# unstable features: use cargo +nightly fmt
+group_imports = "StdExternalCrate"
