--- a/.github/workflows/lints.yml
+++ b/.github/workflows/lints.yml
@@ -37,7 +37,8 @@ jobs:
 
       - name: Run fmt
         run: |
-          cargo fmt --all -- --check
+          rustup install nightly
+          cargo +nightly fmt --all -- --check
 
       - name: Run clippy
         run: |
