--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,8 +15,6 @@ vergen = { version = "8", default-features = false, features = [
     "git",
     "git2",
 ] }
-# For workspace version detection
-cargo_metadata = "0.18.1"
 
 [dependencies]
 openvm-build = { workspace = true }
@@ -25,7 +23,7 @@ openvm-native-recursion = { workspace = true, features = ["static-verifier"] }
 openvm-sdk = { workspace = true }
 openvm-stark-sdk.workspace = true
 openvm-stark-backend.workspace = true
-cargo_metadata = "0.18.1"
+cargo_metadata = { workspace = true }
 
 aws-sdk-s3 = "1.78"
 aws-config = "1.5"
