--- a/crates/functional/compiler/Cargo.toml
+++ b/crates/functional/compiler/Cargo.toml
@@ -16,3 +16,7 @@ pest = "2.7.15"
 pest_derive = "2.7.15"
 
 openvm-stark-sdk = { workspace = true }
+openvm-stark-backend = { workspace = true }
+openvm-circuit-primitives = { workspace = true }
+openvm-circuit = { workspace = true }
+openvm-circuit-derive = { workspace = true }
