--- a/benchmarks/programs/regex/Cargo.toml
+++ b/benchmarks/programs/regex/Cargo.toml
@@ -5,8 +5,8 @@ name = "openvm-regex-program"
 edition = "2021"
 
 [dependencies]
-openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
-openvm-keccak256-guest = { path = "../../../extensions/keccak256/guest" }
+#openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
+#openvm-keccak256-guest = { path = "../../../extensions/keccak256/guest" }
 regex = { version = "1.11.1", default-features = false }
 
 [features]
