--- a/benchmarks/programs/Cargo.toml
+++ b/benchmarks/programs/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-benchmarks"
+name = "openvm-benchmarks-programs"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -8,6 +8,7 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+openvm-benchmarks-utils.workspace = true
 openvm-build.workspace = true
 openvm-circuit.workspace = true
 openvm-sdk.workspace = true
@@ -55,17 +56,6 @@ mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
 jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
 nightly-features = ["openvm-circuit/nightly-features"]
-
-[[bench]]
-name = "fibonacci_execute"
-harness = false
-
-[[bench]]
-name = "regex_execute"
-harness = false
-
-[[bin]]
-name = "fib_e2e"
 
 [package.metadata.cargo-shear]
 ignored = ["derive_more"]
