crates/sdk: add feature flag - pipeline

--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -59,4 +59,5 @@ bench-metrics = [
 ]
 profiling = ["openvm-circuit/function-span", "openvm-transpiler/function-span"]
 parallel = ["openvm-circuit/parallel"]
+pipeline = []
 test-utils = ["openvm-circuit/test-utils"]
