--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 members = [
     "benchmarks/utils",
     "benchmarks/execute",
-    "benchmarks/programs",
+    "benchmarks/e2e",
     "crates/prof",
     "crates/sdk",
     "crates/cli",
@@ -185,6 +185,7 @@ snark-verifier-sdk = { version = "0.2.0", default-features = false, features = [
 ] }
 halo2curves-axiom = "0.7.0"
 
+cargo_metadata = "0.18"
 tracing = "0.1.40"
 bon = "3.2.0"
 serde_json = "1.0.117"
