--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -42,6 +42,8 @@ derive_more = { workspace = true, features = ["from"] }
 num-bigint = { workspace = true, features = ["std", "serde"] }
 serde.workspace = true
 
+tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
+
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 
