--- a/benchmarks/guest/src/bubblesort/Cargo.toml
+++ b/benchmarks/guest/src/bubblesort/Cargo.toml
@@ -1,12 +1,11 @@
 [workspace]
 [package]
-name = "openvm-sha256-program"
+name = "openvm-bubblesort-program"
 version = "0.0.0"
 edition = "2021"
 
 [dependencies]
 openvm = { path = "../../../../crates/toolchain/openvm", features = ["std"] }
-openvm-sha256-guest = { path = "../../../../extensions/sha256/guest" }
 
 [features]
 default = []
