--- a/benchmarks/guest/src/keccak256/Cargo.toml
+++ b/benchmarks/guest/src/keccak256/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 [package]
-name = "openvm-sha256-program"
+name = "openvm-keccak256-program"
 version = "0.0.0"
 edition = "2021"
 
 [dependencies]
 openvm = { path = "../../../../crates/toolchain/openvm", features = ["std"] }
-openvm-sha256-guest = { path = "../../../../extensions/sha256/guest" }
+openvm-keccak256-guest = { path = "../../../../extensions/keccak256/guest" }
 
 [features]
 default = []
