feat: add revm precompiles

--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -28,6 +28,7 @@ openvm-pairing-guest.workspace = true
 openvm-native-circuit.workspace = true
 openvm-native-compiler.workspace = true
 openvm-native-recursion = { workspace = true, features = ["test-utils"] }
+openvm-bigint-circuit.workspace = true
 
 clap = { version = "4.5.9", features = ["derive", "env"] }
 eyre.workspace = true
