--- a/Cargo.toml
+++ b/Cargo.toml
@@ -129,6 +129,7 @@ openvm-custom-insn = { path = "crates/toolchain/custom_insn", default-features =
 openvm-circuit = { path = "crates/vm", default-features = false }
 openvm-circuit-derive = { path = "crates/vm/derive", default-features = false }
 openvm-continuations = { path = "crates/continuations", default-features = false }
+cargo-openvm = { path = "crates/cli", default-features = false }
 
 # Extensions
 openvm-rv32im-circuit = { path = "extensions/rv32im/circuit", default-features = false }
