--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 [dependencies]
 openvm-benchmarks-utils.workspace = true
 openvm-build.workspace = true
+cargo-openvm.workspace = true
 openvm-circuit.workspace = true
 openvm-sdk.workspace = true
 openvm-stark-backend.workspace = true
