--- a/benchmarks/utils/Cargo.toml
+++ b/benchmarks/utils/Cargo.toml
@@ -14,48 +14,33 @@ openvm-sdk.workspace = true
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
 openvm-transpiler.workspace = true
-openvm-rv32im-circuit.workspace = true
-openvm-rv32im-transpiler.workspace = true
-openvm-keccak256-circuit.workspace = true
-openvm-keccak256-transpiler.workspace = true
-openvm-algebra-circuit.workspace = true
-openvm-algebra-transpiler.workspace = true
-openvm-ecc-circuit.workspace = true
-openvm-ecc-transpiler.workspace = true
-openvm-pairing-circuit.workspace = true
-openvm-pairing-guest.workspace = true
 openvm-native-circuit.workspace = true
 openvm-native-compiler.workspace = true
-openvm-native-recursion = { workspace = true, features = ["test-utils"] }
 
 cargo_metadata.workspace = true
 clap = { version = "4.5.9", features = ["derive", "env"] }
 eyre.workspace = true
 tempfile.workspace = true
 tracing.workspace = true
-tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
-rand_chacha = { version = "0.3", default-features = false }
-k256 = { workspace = true, features = ["ecdsa"] }
-tiny-keccak.workspace = true
-derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
-num-bigint = { workspace = true, features = ["std", "serde"] }
-serde.workspace = true
+tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
 
 [dev-dependencies]
-criterion = { version = "0.5", features = ["html_reports"] }
 
 [features]
-default = ["parallel", "mimalloc", "bench-metrics"]
-bench-metrics = ["openvm-native-recursion/bench-metrics"]
+default = ["mimalloc"]
 profiling = ["openvm-sdk/profiling"]
 aggregation = []
-static-verifier = ["openvm-native-recursion/static-verifier"]
-parallel = ["openvm-native-recursion/parallel"]
 mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
 jemalloc-prof = ["openvm-circuit/jemalloc-prof"]
 nightly-features = ["openvm-circuit/nightly-features"]
+build-binaries = []
+
+[[bin]]
+name = "build-elfs"
+path = "src/build-elfs.rs"
+required-features = ["build-binaries"]
 
 [package.metadata.cargo-shear]
 ignored = ["derive_more"]
