--- a/extensions/sha256/circuit/Cargo.toml
+++ b/extensions/sha256/circuit/Cargo.toml
@@ -16,6 +16,7 @@ openvm-instructions = { workspace = true }
 openvm-sha256-transpiler = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
 openvm-sha-air = { workspace = true }
+openvm-sha-macros = { workspace = true }
 
 derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
@@ -23,6 +24,7 @@ rand.workspace = true
 serde.workspace = true
 sha2 = { version = "0.10", default-features = false }
 strum = { workspace = true }
+ndarray.workspace = true
 
 [dev-dependencies]
 openvm-stark-sdk = { workspace = true }
