--- a/benchmarks/prove/Cargo.toml
+++ b/benchmarks/prove/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-benchmarks-e2e"
+name = "openvm-benchmarks-prove"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
@@ -38,6 +38,7 @@ derive-new.workspace = true
 derive_more = { workspace = true, features = ["from"] }
 num-bigint = { workspace = true, features = ["std", "serde"] }
 serde.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 
