--- a/examples/pairing/Cargo.toml
+++ b/examples/pairing/Cargo.toml
@@ -9,12 +9,12 @@ members = []
 [dependencies]
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
-] }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", features = [
+], branch = "develop" }
+openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop", features = [
     "bls12_381",
 ] }
 hex-literal = { version = "0.4.1", default-features = false }
