--- a/examples/sha256/Cargo.toml
+++ b/examples/sha256/Cargo.toml
@@ -9,8 +9,8 @@ members = []
 [dependencies]
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
-] }
-openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git" }
+], branch = "develop" }
+openvm-sha256-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 hex = { version = "0.4.3" }
 
 [features]
