--- a/examples/keccak/Cargo.toml
+++ b/examples/keccak/Cargo.toml
@@ -7,10 +7,11 @@ edition = "2021"
 members = []
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
+openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "develop", features = [
     "std",
 ] }
-openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git" }
+openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+openvm-keccak256-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 hex = { version = "0.4.3" }
 
 [features]
