--- a/examples/u256/Cargo.toml
+++ b/examples/u256/Cargo.toml
@@ -9,8 +9,8 @@ members = []
 [dependencies]
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
-] }
-openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git" }
+], branch = "develop" }
+openvm-bigint-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 
 [features]
 default = []
