--- a/benchmarks/programs/kitchen-sink/Cargo.toml
+++ b/benchmarks/programs/kitchen-sink/Cargo.toml
@@ -18,7 +18,7 @@ openvm-pairing-guest = { path = "../../../extensions/pairing/guest", default-fea
     "bls12_381",
 ] }
 openvm-keccak256-guest = { path = "../../../extensions/keccak256/guest", default-features = false }
-openvm-sha256-guest = { path = "../../../extensions/sha256/guest", default-features = false }
+openvm-sha2-guest = { path = "../../../extensions/sha2/guest", default-features = false }
 openvm-bigint-guest = { path = "../../../extensions/bigint/guest", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 serde = "1.0"
