--- a/crates/circuits/sha-macros/Cargo.toml
+++ b/crates/circuits/sha-macros/Cargo.toml
@@ -13,7 +13,7 @@ itertools = "0.14"
 proc-macro2 = "1.0"
 
 [dev-dependencies]
-openvm-sha-air = { workspace = true }
+openvm-sha2-air = { workspace = true }
 openvm-circuit-primitives-derive = { workspace = true }
 ndarray.workspace = true
 
