Rename sha-macros and move it to openvm-circuit-primitives-derive

--- a/crates/circuits/cols-ref-macro/Cargo.toml
+++ b/crates/circuits/cols-ref-macro/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "openvm-sha-macros"
+name = "todo-delete"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
