--- a/crates/circuits/primitives/derive/Cargo.toml
+++ b/crates/circuits/primitives/derive/Cargo.toml
@@ -14,4 +14,12 @@ proc-macro = true
 [dependencies]
 syn = { version = "2.0", features = ["parsing"] }
 quote = "1.0"
-itertools = { workspace = true }
+itertools = { workspace = true, default-features = true }
+proc-macro2 = "1.0"
+
+[dev-dependencies]
+openvm-sha2-air = { workspace = true }
+ndarray.workspace = true
+
+[package.metadata.cargo-shear]
+ignored = ["ndarray"]
