--- a/extensions/sha2/transpiler/Cargo.toml
+++ b/extensions/sha2/transpiler/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-name = "openvm-sha256-transpiler"
+name = "openvm-sha2-transpiler"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
-description = "Transpiler extension for sha256"
+description = "Transpiler extension for SHA-2"
 
 [dependencies]
 openvm-stark-backend = { workspace = true }
 openvm-instructions = { workspace = true }
 openvm-transpiler = { workspace = true }
 rrs-lib = { workspace = true }
-openvm-sha256-guest = { workspace = true }
+openvm-sha2-guest = { workspace = true }
 openvm-instructions-derive = { workspace = true }
 strum = { workspace = true }
