--- a/examples/sha2/Cargo.toml
+++ b/examples/sha2/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sha256-example"
+name = "sha2-example"
 version = "0.0.0"
 edition = "2021"
 
@@ -7,6 +7,7 @@ edition = "2021"
 members = []
 
 [dependencies]
+# TODO: update rev after PR is merged
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
     "std",
 ] }
