--- a/crates/toolchain/tests/Cargo.toml
+++ b/crates/toolchain/tests/Cargo.toml
@@ -21,6 +21,8 @@ openvm-algebra-circuit.workspace = true
 openvm-ecc-guest = { workspace = true, features = ["halo2curves", "k256"] }
 openvm-instructions = { workspace = true }
 openvm-platform = { workspace = true }
+openvm-sdk = { workspace = true }
+openvm-ecc-circuit = { workspace = true }
 
 eyre.workspace = true
 test-case.workspace = true
