--- a/crates/toolchain/transpiler/Cargo.toml
+++ b/crates/toolchain/transpiler/Cargo.toml
@@ -15,6 +15,7 @@ eyre.workspace = true
 thiserror.workspace = true
 elf = "0.7.4"
 rrs-lib.workspace = true
+rustc-demangle = "0.1.24"
 
 [features]
 function-span = []
