--- a/crates/sdk/Cargo.toml
+++ b/crates/sdk/Cargo.toml
@@ -54,6 +54,7 @@ snark-verifier = { workspace = true }
 snark-verifier-sdk.workspace = true
 tempfile.workspace = true
 hex.workspace = true
+num-bigint = { workspace = true }
 forge-fmt.workspace = true
 
 [features]
