--- a/examples/algebra/Cargo.toml
+++ b/examples/algebra/Cargo.toml
@@ -7,12 +7,20 @@ edition = "2021"
 members = []
 
 [dependencies]
+# TODO: switch back after PR is merged
+#openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
+    #"std",
+#], branch = "develop" }
+#openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+#openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
+#openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
 openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
-    "std",
-] }
-openvm-platform = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git" }
-openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git" }
+   "std",
+], branch = "feat/build-script-for-init" }
+openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
+openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
+openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
+
 serde = { version = "1.0.216" }
 num-bigint = { version = "0.4.6", features = ["serde"] }
 
