--- a/examples/pairing/Cargo.toml
+++ b/examples/pairing/Cargo.toml
@@ -7,26 +7,16 @@ edition = "2021"
 members = []
 
 [dependencies]
-#openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
-    #"std",
-#], branch = "develop" }
-#openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
-#openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
-#openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
-#openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop" }
-#openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "develop", features = [
-    #"bls12_381",
-#] }
-openvm = { git = "https://github.com/openvm-org/openvm.git", features = [
-   "std",
-], branch = "feat/build-script-for-init" }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
-openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
-openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
-openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init" }
-openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "feat/build-script-for-init", features = [
-   "bls12_381",
+
+openvm = { path = "../../crates/toolchain/openvm", features = ["std"] }
+openvm-algebra-guest = { path = "../../extensions/algebra/guest" }
+openvm-algebra-moduli-macros = { path = "../../extensions/moduli-macros" }
+openvm-algebra-complex-macros = { path = "../../extensions/complex-macros" }
+openvm-ecc-guest = { path = "../../extensions/ecc/guest" }
+openvm-pairing-guest = { path = "../../extensions/pairing/guest", features = [
+    "bls12_381",
 ] }
+openvm-platform = { path = "../../crates/toolchain/platform" }
 
 hex-literal = { version = "0.4.1", default-features = false }
 
