--- a/extensions/ecc/tests/Cargo.toml
+++ b/extensions/ecc/tests/Cargo.toml
@@ -23,6 +23,8 @@ openvm-sdk.workspace = true
 eyre.workspace = true
 hex-literal.workspace = true
 num-bigint.workspace = true
+halo2curves-axiom = { workspace = true }
+
 [features]
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
