--- a/extensions/pairing/tests/Cargo.toml
+++ b/extensions/pairing/tests/Cargo.toml
@@ -27,6 +27,7 @@ eyre.workspace = true
 rand.workspace = true
 num-bigint.workspace = true
 num-traits.workspace = true
+halo2curves-axiom = { workspace = true }
 
 [features]
 default = ["parallel"]
