--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -28,7 +28,7 @@ tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
 criterion = { version = "0.5", features = ["html_reports"] }
 
 [features]
-default = ["mimalloc"]
+default = ["jemalloc"]
 aggregation = []
 mimalloc = ["openvm-circuit/mimalloc"]
 jemalloc = ["openvm-circuit/jemalloc"]
