--- a/extensions/ecc/tests/programs/Cargo.toml
+++ b/extensions/ecc/tests/programs/Cargo.toml
@@ -13,8 +13,10 @@ openvm-ecc-guest = { path = "../../guest", default-features = false }
 openvm-ecc-sw-macros = { path = "../../../../extensions/ecc/sw-macros", default-features = false }
 openvm-algebra-guest = { path = "../../../algebra/guest", default-features = false }
 openvm-algebra-moduli-macros = { path = "../../../algebra/moduli-macros", default-features = false }
-openvm-keccak256-guest = { path = "../../../keccak256/guest", default-features = false }
 openvm-rv32im-guest = { path = "../../../../extensions/rv32im/guest", default-features = false }
+
+# TODO: change to https after openvm-primitives is public
+openvm-keccak256 = { git = "ssh://git@github.com/openvm-org/openvm-primitives.git", branch = "feat/primitive-libs" }
 
 serde = { version = "1.0", default-features = false, features = [
     "alloc",
