fix: Cargo.toml

--- a/extensions/rv32im/tests/programs/Cargo.toml
+++ b/extensions/rv32im/tests/programs/Cargo.toml
@@ -29,4 +29,4 @@ lto = "thin"    # turn on lto = fat to decrease binary size, but this optimizes 
 
 [[example]]
 name = "getrandom"
-requires = ["getrandom"]
+required-features = ["getrandom"]
