--- a/benchmarks/guest/ecrecover/Cargo.toml
+++ b/benchmarks/guest/ecrecover/Cargo.toml
@@ -12,7 +12,7 @@ openvm-algebra-guest = { path = "../../../extensions/algebra/guest", default-fea
 openvm-ecc-guest = { path = "../../../extensions/ecc/guest", default-features = false, features = [
     "k256",
 ] }
-openvm-keccak256-guest = { path = "../../../extensions/keccak256/guest", default-features = false }
+openvm-keccak256 = { path = "../../../guest-libs/keccak256/guest", default-features = false }
 # We do not patch revm-precompile so that the benchmark only depends on this repo.
 revm-precompile = { version = "14.0.0", default-features = false }
 alloy-primitives = { version = "0.8.10", default-features = false, features = [
