--- a/benchmarks/execute/Cargo.toml
+++ b/benchmarks/execute/Cargo.toml
@@ -9,15 +9,15 @@ license.workspace = true
 
 [dependencies]
 openvm-benchmarks-utils.workspace = true
-cargo-openvm.workspace = true
+# cargo-openvm.workspace = true
 openvm-circuit.workspace = true
-openvm-sdk.workspace = true
+# openvm-sdk.workspace = true
 openvm-stark-sdk.workspace = true
 openvm-transpiler.workspace = true
 openvm-rv32im-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
-openvm-keccak256-circuit.workspace = true
-openvm-keccak256-transpiler.workspace = true
+# openvm-keccak256-circuit.workspace = true
+# openvm-keccak256-transpiler.workspace = true
 
 clap = { version = "4.5.9", features = ["derive", "env"] }
 eyre.workspace = true
