Update rand dep for ff_derive tests

--- a/guest-libs/ff_derive/tests/programs/Cargo.toml
+++ b/guest-libs/ff_derive/tests/programs/Cargo.toml
@@ -5,10 +5,10 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-openvm = { git = "https://github.com/openvm-org/openvm.git", branch = "refactor/guest-library-reorg-final" }
-openvm-platform = { git = "https://github.com/openvm-org/openvm.git", branch = "refactor/guest-library-reorg-final" }
-openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", branch = "refactor/guest-library-reorg-final" }
-openvm-algebra-moduli-macros = { git = "https://github.com/openvm-org/openvm.git", branch = "refactor/guest-library-reorg-final" }
+openvm = { path = "../../../../crates/toolchain/openvm" }
+openvm-platform = { path = "../../../../crates/toolchain/platform" }
+openvm-algebra-guest = { path = "../../../../extensions/algebra/guest" }
+openvm-algebra-moduli-macros = { path = "../../../../extensions/algebra/moduli-macros" }
 
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = [
@@ -16,7 +16,7 @@ serde = { version = "1.0", default-features = false, features = [
     "derive",
 ]}
 ff = { version = "0.13.1", features = ["derive"] }
-rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
+rand = { version = "0.9.1", default-features = false }
 num-bigint = { version = "0.4.6", default-features = false }
 
 openvm-ff-derive = { path = "../../guest" }
