chore: update --lib option handling + build_guest_package uses build_generic

--- a/crates/cli/tests/programs/multi/calculator/Cargo.toml
+++ b/crates/cli/tests/programs/multi/calculator/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 [dependencies]
 openvm = { path = "../../../../../toolchain/openvm" }
 
+[lib]
+name = "calculator"
+path = "src/lib.rs"
+
 [[bin]]
 name = "calculator"
 path = "src/main.rs"
