feat(new-execution): measure walltime in codspeed ci job

--- a/.github/workflows/benchmarks-execute.yml
+++ b/.github/workflows/benchmarks-execute.yml
@@ -113,9 +113,17 @@ jobs:
           fi
 
   codspeed-benchmarks:
+    strategy:
+      matrix:
+        include:
+          - mode: "instrumentation"
+          - mode: "walltime"
+
+    name: Run ${{ matrix.mode }} benchmarks
     runs-on:
       - runs-on=${{ github.run_id }}
       - runner=8cpu-linux-x64
+
     steps:
       - uses: actions/checkout@v4
 
