--- a/guest-libs/p256/tests/Cargo.toml
+++ b/guest-libs/p256/tests/Cargo.toml
@@ -14,13 +14,11 @@ openvm-algebra-circuit.workspace = true
 openvm-algebra-transpiler.workspace = true
 openvm-ecc-transpiler.workspace = true
 openvm-ecc-circuit.workspace = true
-openvm-ecc-guest.workspace = true
 openvm-sha256-circuit.workspace = true
 openvm-sha256-transpiler.workspace = true
 openvm-rv32im-circuit.workspace = true
 openvm-rv32im-transpiler.workspace = true
 openvm-toolchain-tests.workspace = true
-openvm-sdk.workspace = true
 
 openvm-stark-backend.workspace = true
 openvm-stark-sdk.workspace = true
@@ -32,3 +30,6 @@ derive_more = { workspace = true, features = ["from"] }
 [features]
 default = ["parallel"]
 parallel = ["openvm-circuit/parallel"]
+
+[package.metadata.cargo-shear]
+ignored = ["derive_more"]
