--- a/guest-libs/pairing/guest/Cargo.toml
+++ b/guest-libs/pairing/guest/Cargo.toml
@@ -13,7 +13,6 @@ openvm-platform = { workspace = true }
 serde = { workspace = true }
 itertools = { workspace = true, features = ["use_alloc"] }
 rand.workspace = true
-strum_macros.workspace = true
 hex-literal = { workspace = true }
 openvm-algebra-guest = { workspace = true }
 openvm-algebra-moduli-macros = { workspace = true }
@@ -31,11 +30,7 @@ group = "0.13.0"
 [target.'cfg(not(target_os = "zkvm"))'.dependencies]
 num-bigint.workspace = true
 num-traits.workspace = true
-lazy_static.workspace = true
-openvm-ecc-guest = { workspace = true, features = ["halo2curves"] }
-
-[target.'cfg(not(target_os = "zkvm"))'.dev-dependencies]
-subtle = "2.6.1"
+openvm-ecc-guest = { workspace = true }
 
 [features]
 default = []
