feat: cargo CLI run and prove run build + target directory overhaul

--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -38,6 +38,7 @@ target-lexicon = "0.12.15"
 tempfile = "3.10.1"
 toml = { workspace = true }
 bitcode.workspace = true
+itertools.workspace = true
 
 [features]
 default = ["parallel", "jemalloc", "evm-verify", "bench-metrics"]
