--- a/benchmarks/guest/ecrecover/Cargo.toml
+++ b/benchmarks/guest/ecrecover/Cargo.toml
@@ -5,7 +5,6 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-k256 = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
 ecdsa = { version = "0.16.9", default-features = false }
 openvm = { path = "../../../crates/toolchain/openvm", features = ["std"] }
 openvm-platform = { path = "../../../crates/toolchain/platform", default-features = false }
@@ -14,7 +13,7 @@ openvm-ecc-guest = { path = "../../../extensions/ecc/guest", default-features = 
     "k256",
 ] }
 openvm-keccak256 = { path = "../../../guest-libs/keccak256/guest", default-features = false }
-openvm-k256 = { path = "../../../guest-libs/k256/guest", default-features = false }
+k256 = { path = "../../../guest-libs/k256/guest", default-features = false, features = ["ecdsa"], package = "openvm-k256" }
 # We do not patch revm-precompile so that the benchmark only depends on this repo.
 revm-precompile = { version = "14.0.0", default-features = false }
 alloy-primitives = { version = "0.8.10", default-features = false, features = [
