e4 traits for base_alu and base_alu256

--- a/extensions/rv32-adapters/Cargo.toml
+++ b/extensions/rv32-adapters/Cargo.toml
@@ -16,6 +16,7 @@ openvm-circuit = { workspace = true }
 openvm-rv32im-circuit = { workspace = true }
 openvm-instructions = { workspace = true }
 
+zerocopy = { workspace = true, features = ["derive"] }
 itertools.workspace = true
 derive-new.workspace = true
 rand.workspace = true
