--- a/crates/vm/Cargo.toml
+++ b/crates/vm/Cargo.toml
@@ -35,7 +35,7 @@ eyre.workspace = true
 derivative.workspace = true
 static_assertions.workspace = true
 getset.workspace = true
-dashmap = { version = "6.1.0", features = ["rayon"] }
+dashmap = { version = "6.1.0" }
 
 [dev-dependencies]
 test-log.workspace = true
